# functional-cpp

./: .gitmodules  .talking-points.md.swp  CMakeLists.txt  composition.hpp  functions.hpp  talking-points.md  test.cpp
